src/test/resources/org/xmlcml/www/convention/simpleUnit/valid/foreign-elements-are-allowed-5.cml
<?xml version="1.0" encoding="UTF-8"?>
<cml:unitList convention="conventions:simpleUnit" xmlns:cml="http://www.xml-cml.org/schema"
              xmlns:conventions="http://www.xml-cml.org/convention/">
    <cml:unit/>
    <cml:unit>
        <x:p xmlns:x="http://www.w3.org/1999/xhtml">
            multiple cml:unit elements are allowed
        </x:p>
    </cml:unit>
</cml:unitList>
