src/test/resources/org/xmlcml/www/convention/simpleUnit/invalid/simpleUnit-must-be-specified-on-unitList-2.cml
<x:p xmlns:x="http://www.w3.org/1999/xhtml" xmlns:cml="http://www.xml-cml.org/schema" xmlns:conventions="http://www.xml-cml.org/convention/">
<cml:molecule convention="conventions:simpleUnit">
        <cml:unitList>
            <cml:unit />
        </cml:unitList>
    </cml:molecule>
</x:p>
